--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "bmewburn.vscode-intelephense-client",
         "devsense.phptools-vscode",
         "github.vscode-pull-request-github",
-        "redocly.openapi-vs-code"
+        "redocly.openapi-vs-code",
+        "junstyle.php-cs-fixer"
     ]
 }
